ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail11.ligo
function t (const x : list(int)) is
  case x of
  | hd#(hd2#tl) -> hd + hd2
  | nil -> 0
  end